--- a/NEA/NEA.csproj
+++ b/NEA/NEA.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Party.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QLearning.cs" />
     <Compile Include="Step.cs" />
     <Compile Include="XmlHandler.cs" />
   </ItemGroup>
