--- a/NEA/App.config
+++ b/NEA/App.config
@@ -2,5 +2,10 @@
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+
     </startup>
+  <appSettings>
+    <add key="TargetReward" value="300"></add>
+    <add key="BaseLearningRate" value="0.8"></add>
+  </appSettings>
 </configuration>
