Added currently non-functional UI mode to app.config, added second edge in teh test graph to check to if initialisermatrix method works(it does currently),and added qtransition, gethighestqreward, and trainqmatrix(currently unfinished) to the qlearning class to work towards getting the basic q learning functionality of the program completed

--- a/NEA/App.config
+++ b/NEA/App.config
@@ -5,7 +5,8 @@
 
     </startup>
   <appSettings>
-    <add key="TargetReward" value="300"></add>
-    <add key="BaseLearningRate" value="0.8"></add>
+    <add key="TargetReward" value="300"></add><!--Must be an int-->
+    <add key="BaseLearningRate" value="0.8"></add><!--Must be a float-->
+    <add key="UIMode" value="console"></add><!--console or wpf-->
   </appSettings>
 </configuration>
