--- a/NEA/App.config
+++ b/NEA/App.config
@@ -6,6 +6,7 @@
     </startup>
   <appSettings>
     <add key="TargetReward" value="300"></add><!--Must be an int-->
+    <add key="FailureReward" value="-300"></add><!--Must be an int-->
     <add key="BaseLearningRate" value="0.8"></add><!--Must be a float-->
     <add key="UIMode" value="console"></add><!--console or wpf-->
   </appSettings>
