Added path variable to appconfig which is the default place to output qmatrix, finished off first draft of complete trainqmatrix method, BUG: can't serialize graph currently do to an issue with combat encounter class, added nodeencounter to node class, FIXED BUG: added parameterless constructor to combat encounter so it can be serialized(still can't be serialized for other reasons tho)

--- a/NEA/App.config
+++ b/NEA/App.config
@@ -9,5 +9,6 @@
     <add key="FailureReward" value="-300"></add><!--Must be an int-->
     <add key="BaseLearningRate" value="0.8"></add><!--Must be a float-->
     <add key="UIMode" value="console"></add><!--console or wpf-->
+    <add key="Path" value="C:\temp\NEA"></add><!--Must be an int-->
   </appSettings>
 </configuration>
